Remove content-base from webpack-dev-server
Now it should be able to find media (defaults to project root).

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "stream bball news",
   "main": "index.js",
   "scripts": {
-    "start": "TARGET=dev webpack-dev-server --devtool eval --progress --colors --hot --inline --history-api-fallback --content-base build"
+    "start": "TARGET=dev webpack-dev-server --devtool eval --progress --colors --hot --inline --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
